[package]
name = "codedaily-backend"
version = "0.1.0"
authors = ["Huy Tran <kingbazoka@gmail.com>"]

[dependencies]
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
rss = { version = "*", features = ["from_url"] }
chrono = "*"
url = "*"
rocket = "*"
rocket_codegen = "*"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
r2d2 = "*"
r2d2-diesel = "*"
rust-crypto = "*"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
