[package]
name = "codedaily-backend"
version = "0.1.0"
authors = ["Huy Tran <kingbazoka@gmail.com>"]

[dependencies]
diesel = { version = "0.15.1", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"
rss = { version = "*", features = ["from_url"] }
chrono = "0.4.0"
url = "1.5.1"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
serde = "1.0.11"
serde_json = "1.0.2"
serde_derive = "1.0.11"
r2d2 = "0.7.3"
r2d2-diesel = "0.15.0"
rust-crypto = "0.2.36"

[dependencies.rocket_contrib]
default-features = false
features = ["json"]
