[package]
name = "codedaily-backend"
version = "0.1.0"
authors = ["Huy Tran <huydt@careskore.com>"]

[dependencies]
diesel = { version = "0.13.0", features = ["postgres"] }
diesel_codegen = { version = "0.13.0", features = ["postgres"] }
dotenv = "0.9.0"
rss = { version = "*", features = ["from_url"] }
chrono = "*"
url = "*"
